fixed https error on mobile

--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -47,13 +47,14 @@
 }
 
 #burgerContainer {
+  display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
   height: 28px;
   width: 28px;
   margin: 0px 33px 0px 0px;
   cursor: pointer;
-  display: none;
 }
 
 #burgerContainer:hover {
@@ -80,23 +81,23 @@
   transition-duration: 0.5s;
 }
 
-.burgerOpen::before {
-  position: absolute;
-  content: '';
-  width: 28px;
-  height: 3px;
-  background-color: #538d72;
-  transform: rotate(90deg);
-  cursor: pointer;
-  transition-duration: 0.5s;
-}
-
 .burgerOpen {
   width: 28px;
   height: 3px;
   background-color: #538d72;
   transform: rotate(45deg);
   border-radius: 3px;
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+
+.burgerOpen::after {
+  position: absolute;
+  content: '';
+  width: 28px;
+  height: 3px;
+  background-color: #538d72;
+  transform: rotate(90deg);
   cursor: pointer;
   transition-duration: 0.5s;
 }
